[workspace]
members = [
    "crates/schemagen_cli",
    "crates/schemagen_core",
    "crates/sources/schemagen_postgres",
    "crates/emitters/schemagen_typescript",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "1"
thiserror = "2"
postgres = "0.19"
globset = "0.4"
testcontainers = { version = "0.27", features = ["blocking"] }
testcontainers-modules = { version = "0.15", features = ["postgres"] }