[workspace]
members = [
    "crates/gieter",
    "crates/gieter_core",
    "crates/sources/gieter_postgres",
    "crates/emitters/gieter_typescript",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stevenliebregt/gieter"
authors = ["Steven Liebregt <s.liebregt@outlook.com>"]
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
toml = "1"
thiserror = "2"
postgres = "0.19"
globset = "0.4"
convert_case = "0.11"
clap = { version = "4", features = ["derive"] }
testcontainers = { version = "0.27", features = ["blocking"] }
testcontainers-modules = { version = "0.15", features = ["postgres"] }