[package]
name = "schemagen_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Command-line code generator that turns database schemas into typed source code"
keywords = ["codegen", "schema", "postgres", "typescript", "cli"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "schemagen"
path = "src/main.rs"

[dependencies]
schemagen_core = { path = "../schemagen_core", version = "0.1.0" }
schemagen_postgres = { path = "../sources/schemagen_postgres", version = "0.1.0" }
schemagen_typescript = { path = "../emitters/schemagen_typescript", version = "0.1.0" }
clap.workspace = true
