[package]
name = "schemagen_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Core traits and types for the schemagen code generator, for building custom sources and emitters"
keywords = ["codegen", "schema", "postgres", "typescript"]
categories = ["development-tools"]

[dependencies]
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
globset.workspace = true