[package]
name = "schemagen_typescript"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "TypeScript emitter for the schemagen code generator"
keywords = ["codegen", "schema", "typescript"]
categories = ["development-tools"]

[dependencies]
schemagen_core = { path = "../../schemagen_core", version = "0.1.0" }
toml.workspace = true
serde.workspace = true
convert_case.workspace = true