[package]
name = "schemagen_postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "PostgreSQL schema source for the schemagen code generator"
keywords = ["codegen", "schema", "postgres"]
categories = ["development-tools"]

[dependencies]
schemagen_core = { path = "../../schemagen_core", version = "0.1.0" }
postgres = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }